--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: deposit-service
   datasource:
     hikari:
       maximum-pool-size: 5
@@ -21,12 +23,26 @@ spring:
           issuer-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New
           jwk-set-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
 
+  kafka:
+    groupId: my_group
+    bootstrapAddress: 10.10.14.68:19092
+    topicTransferRequest: transfer_to_deposit_request
+    topicTransferResponse: transfer_response
+    maxRetryAttempts: 3
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring:
+          deserializer:
+            value:
+              delegate:
+                class: org.springframework.kafka.support.serializer.JsonDeserializer
+
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
     preferIpAddress: true
   client:
-    enabled: false
     serviceUrl:
       defaultZone: http://10.10.14.31:30100/eureka
 
