--- a/deposit-service/src/test/resources/application.properties
+++ b/deposit-service/src/test/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+
+eureka.client.enabled=false
