--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -7,14 +7,14 @@ spring:
       maxLifetime: 300000
       minimumIdle: 5
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_service
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=deposit_service
+    username: psqluser
+    password: PoSPa$$woRd
 
   flyway:
     schemas: deposit_service
-    user: postgres
-    password: postgres
+    user: psqluser
+    password: PoSPa$$woRd
 
   security:
     oauth2:
