--- a/payment-service/src/test/resources/application.properties
+++ b/payment-service/src/test/resources/application.properties
@@ -5,5 +5,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+spring.flyway.enabled=false
 
 eureka.client.enabled=false
